# megamol-1

./: CMakeLists.txt  vcpkg.json
cmake/: megamol_config.cmake  megamol_options.cmake
cmake/vcpkg_ports/ospray/: portfile.cmake  vcpkg.json
cmake/vcpkg_ports/voro/: portfile.cmake  vcpkg.json
frontend/main/src/: main.cpp
frontend/resources/include/: AnyQuery.h  CPUQuery.h  CUDAQuery.h  CUDA_ContextHelper.h  Framebuffer_Events.h  ImageWrapper.h  PerformanceManager.h  PowerCallbacks.h  Screenshots.h  TimeTypes.h  Timers.h  WindowManipulation.h
frontend/resources/src/: ImageWrapper.cpp  Screenshots.cpp
frontend/services/: CMakeLists.txt
frontend/services/cuda/: CUDA_Service.cpp
frontend/services/image_presentation/: ImagePresentation_Service.cpp  ImagePresentation_Service.hpp
frontend/services/opengl_glfw/: OpenGL_GLFW_Service.cpp  OpenGL_GLFW_Service.hpp
frontend/services/opengl_glfw/gl/: OpenGL_GLFW_Service.cpp  OpenGL_GLFW_Utils.cpp  OpenGL_GLFW_Utils.h
frontend/services/opengl_glfw/vk/: Vulkan_GLFW_Utils.cpp  Vulkan_GLFW_Utils.h
frontend/services/power_service/: Power_Service.cpp
frontend/services/power_service/config/: rtb01.rtxcfg  rtb02.rtxcfg
frontend/services/power_service/power/: MetaData.h  ParquetWriter.cpp
frontend/services/profiling_service/: CPUQuery.cpp  CUDAQuery.cpp  GLQuery.cpp  PerformanceManager.cpp  Timers.cpp
frontend/services/screenshot_service/: Screenshot_Service.cpp
frontend/services/video_service/: Video_Service.cpp  Video_Service.hpp  video_util.hpp
plugins/datatools/: CMakeLists.txt
plugins/datatools/include/datatools/: PKD.h  PKDUtils.h
plugins/datatools/src/: PKD.cpp  ParticlesToDensity.cpp  ParticlesToDensity.h
plugins/geometry_calls/include/geometry_calls/: Accessor.h  SimpleSphericalParticles.h
plugins/hpg/: CMakeLists.txt
plugins/hpg/cmake/: configure_optix.cmake  embed_ptx.cmake
plugins/hpg/include/hpg/: hpg.h
plugins/hpg/include/hpg/optix/: CallContext.h  CallPipeline.h  CallProgramGroup.h  CallProgramGroupDesc.h
plugins/hpg/src/: Context.h  hpg.cpp  targetver.h
plugins/hpg/src/optix/: Buffer.cpp  Buffer.h  HitGroupDesc.cpp  HitGroupDesc.h  NullGroupDesc.cpp  NullGroupDesc.h  OptiXCompileOptions.h  OptiXContext.cpp  OptiXContext.h  OptiXFT.cpp  Pipeline.cpp  Pipeline.h  ProgramGroup.cpp  ProgramGroup.h  Utils.h
plugins/mmospray/include/mmospray/: CallOSPRayAPIObject.h
plugins/mmospray/src/: CallOSPRayAPIObject.cpp  OSPRayPKDGeometry.cpp  OSPRayPKDGeometry.h  OSPRayRenderer.cpp
plugins/moldyn/: CMakeLists.txt
plugins/moldyn/include/moldyn/: RDF.h
plugins/moldyn/src/: Accumulator.cpp  Accumulator.h  ProjPlane.cpp  ProjPlane.h  RDF.cpp  moldyn.cpp
plugins/optix_hpg/: CMakeLists.txt
plugins/optix_hpg/cmake/: configure_optix.cmake
plugins/optix_hpg/cuda_resources/: FixedPoint.h  box.h  bpkd.h  btreeletparticle.h  cpkd.h  ctreeletparticle.h  framestate.h  mesh.cu  miss.cu  morton_util.cpp  morton_util.h  particle.h  perraydata.h  pkd.cu  pkd.h  pkd_peel.cu  pkd_utils.h  ptx_util.h  qpkd.h  qtreeletparticle.h  raygen.cu  raygen.h  raygen_peel.cu  sphere.cu  sphere.cuh  sphere.h  sphere_occlusion.cu  treelets.cu
plugins/optix_hpg/src/: optix_hpg.cpp
plugins/optix_hpg/src/optix/: AbstractRenderer.cpp  AbstractRenderer.h  BTreelets.h  CTreelets.h  CallGeometry.h  Context.cpp  FTreelets.h  FixedPoint.h  MMOptixModule.cpp  MMOptixModule.h  MeshGeometry.cpp  MeshGeometry.h  Morton.h  PKDGeometry.cpp  PKDGeometry.h  PKDUtils.cpp  PKDUtils.h  PeelRenderer.cpp  PeelRenderer.h  QTreelets.h  Ray.h  Renderer.cpp  Renderer.h  SPKDGridify.h  SphereGeometry.cpp  SphereGeometry.h  TreeletCache.cpp  TreeletCache.h  Utils.h  random.h  random_owl.h  utils_device.h  utils_host.h
plugins/optix_owl/cuda_resources/: bvh.h  bvhPrograms.cu  perraydata.h  raygen.h  raygenPrograms.cu
plugins/optix_owl/src/: BVHRenderer.cpp  BVHRenderer.h  BaseRenderer.cpp  BaseRenderer.h
plugins/probe/src/: ProbeClustering.cpp  ProbeClustering.h
plugins/thermodyn/: CMakeLists.txt
plugins/thermodyn/src/: ContactSurface.cpp  ContactSurface.h  PCLSurface.cpp  PCLSurface.h  ParticleProperties.cpp  ParticleProperties.h  thermodyn.cpp
vislib/: CMakeLists.txt
